fix overflowing text

--- a/css/styles.css
+++ b/css/styles.css
@@ -910,7 +910,21 @@ section .gutter {
 	overflow:hidden;
 	z-index:2;
 }
-.intro-content, .about-content, .fees-content {
+
+.affiliations-content-wrapper {
+	display:-ms-grid;
+	display:grid;
+	-ms-grid-columns:12fr;
+	grid-template-columns:12fr;
+	-ms-grid-column:2;
+	-ms-grid-column-span:1;
+	grid-column:2/3;
+	position:relative;
+	overflow:hidden;
+	z-index:2;
+}
+
+.intro-content, .about-content, .fees-content, .affiliations-content {
 	display:-webkit-box;
 	display:-ms-flexbox;
 	display:flex;
@@ -923,7 +937,7 @@ section .gutter {
 	font-size: 2rem;
 }
 
-.about-content, .fees-content {
+.about-content, .fees-content, .affiliations-content {
 	display: block;
 }
 
